# ldpc_ber_server

./: .clang-format  .gitignore  README.md
client/: cmodel_analysis_testing.ipynb  docsis_medium.ipynb  dv3_dc15_S160_M39_N195_Girth10.QCldpc  dv3_dv16_M45_N240_S128_Girth8_RS_algof_seed56_c5.QCldpc  repetition_3.sdfec.yml  repetition_code.ipynb  sdfec_client.py  sdfec_client_example.ipynb  try_protograph15_girth6.QCldpc
client/data/: data.vcd  data_2.vcd
sdfec_cmodel_python/: CMakeLists.txt  ber_tester.py  boxmuller.cpp  boxmuller.h  boxmuller_rom.cpp  ldpc_ber_tester.cpp  ldpc_ber_tester.h  sdfec_cmodel.cpp  sdfec_cmodel.h  sdfec_cmodel_bindings.cpp  sdfec_cmodel_exp.cpp  sdfec_cmodel_exp.h  sdfec_cmodel_exp_bindings.cpp  sdfec_cmodel_shim.cpp  sdfec_cmodel_shim.h  sdfec_cmodel_utils.h  test.py  test.yml  test_bitexact_boxmuller.py  xoroshiro128plus.c  xoroshiro128plus.h  xoroshiro128plus_matrices.c
sdfec_python/: CMakeLists.txt  README.md  sdfec.cpp  sdfec.h  sdfec_bindings.cpp  sdfec_usr_intf.c  sdfec_usr_intf.h  test.sdfec.yml  xilinx_sdfec.h  xsdfec_stats.cpp  xsdfec_stats.h
worker/: config.json  index.html  ldpc_ber_tester.py  main.py  web_api.py  web_utils.py  worker.py  worker_test.py
worker/service/: ber-server.service
